--- a/index.html
+++ b/index.html
@@ -18,8 +18,38 @@
 
 
 <body>
-  <h1>teste</h1>
-  <h2>subteste</h2>
-  <a href="#"> link </a>
+  <header class="container">
+    <nav id="primary" class="grid grid-flow-col"> 
+      <div>
+        <img src="assets/icons/lista.svg" alt="ícone de lista">
+        <strong>Menu</strong>
+      </div>
+
+      <div>
+        <img src="assets/icons/Tech News.svg" alt="Logo da technews">
+      </div>
+
+      <div>
+        <strong>
+          Buscar
+        </strong>
+        <img src="assets/icons/lupa.svg" alt="ícone de lupa">
+      </div>
+      </nav>
+
+
+    <nav id="secondary" class="grid grid-flow-col
+      <a href="#"> Inteligência Artificial </a>
+      <a href="#"> Blockchain </a>
+      <a href="#"> Hologramas </a>
+      <a href="#"> Internet </a>
+      <a href="#"> Vestíveis </a>
+      <a href="#"> Realidade Aumentada </a>
+      <a href="#"> Realidade  Virtual </a>
+    </nav>
+      
+
+  
+  </header>
 </body>
 </html>
