--- a/index.html
+++ b/index.html
@@ -47,9 +47,32 @@
       <a href="#"> Realidade Aumentada </a>
       <a href="#"> Realidade  Virtual </a>
     </nav>
-      
-
-  
   </header>
+
+  <main class="grid container">
+    <section id="featured" class="grid grid-flow-col gap-16">
+      <div>
+        <img src="assets/Image 01.png" alt="">
+      </div>
+
+      <div class="grid grid-cols-2 gap-16">
+        <div>
+          <img src="assets/Image 02.png" alt="">
+        </div>
+
+        <div>
+          <img src="assets/Image 03.png" alt="">
+        </div>
+
+        <div>
+          <img src="assets/Image 04.png" alt="">
+        </div>
+
+        <div>
+          <img src="assets/Image 05.png" alt="">
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
