adding linear gradient

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <main class="grid container">
     <section id="featured" class="grid grid-flow-col gap-16">
-      <div>
+      <div class="card">
         <img src="assets/Image 01.png" alt="">
       </div>
 
@@ -75,7 +75,7 @@
     </section>
 
 
-    
+
 
 
   </main>
