--- a/index.html
+++ b/index.html
@@ -51,9 +51,15 @@
 
   <main class="grid container">
     <section id="featured" class="grid grid-flow-col gap-16">
-      <div class="card">
+      <figure class="card"> <!--tag figure pra escrever texto dentro da img-->
         <img src="assets/Image 01.png" alt="">
-      </div>
+        <figcaption>
+          <span class="content-tag"> Robótica </span>
+            <h2 class="text-2xl">
+              Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.
+            </h2>
+        </figcaption>
+      </figure>
 
       <div class="grid grid-cols-2 gap-16">
         <div>
