structuring the weekly section

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
       </div>
 
       <div>
-        <strong>
-          Buscar
-        </strong>
+        <strong>Buscar</strong>
         <img src="assets/icons/lupa.svg" alt="ícone de lupa">
       </div>
       </nav>
@@ -105,9 +103,69 @@
     </section>
 
 
+    <section id="weekly">
+      <header class="grid grid-flow-col">
+        <h3>Mais lidas da semana</h3>
+        <a href="#" class="grid-flow-col"> <!--pq usou href se nao eh link?-->
+          <strong>Ver tudo</strong>
+          <span></span>
+        </a>
+      </header>
 
+      <div class="grid gap-16">
+        <figure>
+          <span class="content-tag"> veículos </span>
+          <img src="assets/Image 06.png" alt="">
+          <p>
+            Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...
+          </p>
+          </span>
+        </figure>
+
+      <div class="grid gap-16">
+        <figure>
+          <span class="content-tag"> hologramas </span>
+          <img src="assets/Image 07.png" alt="">
+          <p>
+            Plataforma de videoconferência apresenta nova função de hologramas, tornando as chama...
+          </p>
+          </span>
+        </figure>
+
+
+      <div class="grid gap-16">
+        <figure>
+          <span class="content-tag"> realidade virtual </span>
+          <img src="assets/Image 08.png" alt="">
+          <p>
+            Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...
+          </p>
+          </span>
+        </figure>
+
+
+      <div class="grid gap-16">
+        <figure>
+          <span class="content-tag"> internet </span>
+          <img src="assets/Image 09.png" alt="">
+          <p>
+            Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.
+          </p>
+          </span>
+        </figure>
+      </div>
+    </section>
     
     
+
+
+
+
+
+
+
+
+
 
   </main>
 </body>
