applying styles on weekly section

--- a/index.html
+++ b/index.html
@@ -103,16 +103,20 @@
     </section>
 
 
-    <section id="weekly">
+
+    <section id="weekly"> 
       <header class="grid grid-flow-col">
         <h3>Mais lidas da semana</h3>
         <a href="#" class="grid-flow-col"> <!--pq usou href se nao eh link?-->
-          <strong>Ver tudo</strong>
-          <span></span>
+          <strong> Ver tudo</strong>
+         <span> 
+        
+         </span> <!--pq?-->
         </a>
       </header>
 
-      <div class="grid gap-16">
+
+      <div class="grid gap-16"> 
         <figure>
           <span class="content-tag"> veículos </span>
           <img src="assets/Image 06.png" alt="">
@@ -122,7 +126,6 @@
           </span>
         </figure>
 
-      <div class="grid gap-16">
         <figure>
           <span class="content-tag"> hologramas </span>
           <img src="assets/Image 07.png" alt="">
@@ -133,7 +136,6 @@
         </figure>
 
 
-      <div class="grid gap-16">
         <figure>
           <span class="content-tag"> realidade virtual </span>
           <img src="assets/Image 08.png" alt="">
@@ -143,8 +145,7 @@
           </span>
         </figure>
 
-
-      <div class="grid gap-16">
+  
         <figure>
           <span class="content-tag"> internet </span>
           <img src="assets/Image 09.png" alt="">
